--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.29",
     "mongoose-encryption": "^2.0.2",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
