--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@admin-bro/express": "^3.0.0",
+    "@admin-bro/mongoose": "^1.0.0",
+    "admin-bro": "^3.2.5",
+    "admin-bro-mongoose": "^0.5.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -16,8 +20,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.17.1",
     "font-awesome": "^4.7.0",
+    "formage": "^2.8.4",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.29",
     "mongoose-encryption": "^2.0.2",
