--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "incomeejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"concurrently -n 'server,client' \"nodemon server.js\" \"npm run client\"",
+    "client":"cd taxargo && npm start",
+    "dev":"concurrently -n 'server,client' \"nodemon server.js\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +18,7 @@
     "admin-bro-mongoose": "^0.5.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
